# drawstream

./: .gitignore  AGENTS.md  README.md  errors.md  main.py  pyproject.toml  run.md  setting.md
assets/examples/: aurora_cabin_plan.json
docs/: ARCHITECTURE.md
src/draw_stream/: __init__.py  app.py  canvas_dsl.py  cli.py  config.py  gatekeeper.py  llm.py  logging.py  main.py  models.py  queue.py
src/draw_stream/api/: __init__.py  server.py
src/draw_stream/artistry/: __init__.py  image_to_canvas.py  pipeline.py  pixel_generator.py  scene_planner.py
src/draw_stream/donation/: __init__.py  ingestor.py  rest.py  websocket.py
src/draw_stream/renderer/: __init__.py  animations.py  hud.py  runtime.py  surface.py
tests/: test_canvas_dsl.py  test_gatekeeper.py  test_image_to_canvas.py  test_llm.py  test_queue.py  utils.py
tests/manual/: create_reference_plan.py  diagnostics.py  render_samples.py  scene_planner_probe.py
